--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -2,8 +2,8 @@
              xmlns:xi="http://www.w3.org/2001/XInclude"
              require-restart="false">
     <id>com.codingchapters.main</id>
-    <name>CodeBook</name>
-    <version>2025.1.24</version>
+    <name>MinimalCodeBook</name>
+    <version>2025.1.27.1</version>
     <vendor url="https://codingchapters.com">CodingChapters</vendor>
     <description>
         <![CDATA[
@@ -11,7 +11,7 @@
         technical presentations
       ]]>
     </description>
-    <idea-version since-build="251.25410" until-build="251.*"/>
+    <idea-version since-build="251.26927" until-build="251.*"/>
 
     <depends>com.intellij.modules.java</depends>
     <depends>org.intellij.scala</depends>
@@ -20,7 +20,7 @@
 
 
         <action class="com.codingchapters.tooling.DummyAction" text="dum dum" id="DummyActionId">
-            <add-to-group group-id="ProjectViewPopupMenu" anchor="first"/>
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
         </action>
 
 
